namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-assess-risks-and-needs-integrations-test/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-assess-risks-and-needs-integrations-test"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "test"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "assess-risks-and-needs"
    cloud-platform.justice.gov.uk/application: "HMPPS Assess Risks and Needs Integrations"
    cloud-platform.justice.gov.uk/owner: "Assess Risks and Needs: assess-risks-and-needs@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-assess-risks-and-needs-handover-service"
    cloud-platform.justice.gov.uk/team-name: "hmpps-assessments"
    cloud-platform.justice.gov.uk/review-after: ""
